--- a/templates/main.html
+++ b/templates/main.html
@@ -3,9 +3,10 @@
 {% block content %}
 <div class="container" style="margin-left:40px">
     <p>Generic Django</p>
+    Authenticated: {{request.user.is_authenticated}}
     {% if request.user.is_authenticated %}
     <p>
-        Welcome, {{request.user.username}}
+        Welcome, {{request.user.first_name}}
     </p>
     {% endif %}
 </div>
