ensure user and prfoile are synced.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -40,6 +40,7 @@
                             </ul>
                         </li>
                         <li><a class="nav-link" href="{% url 'authuser:logout' %}">Logout</a></li>
+                        <li><a class="nav-link" href="/admin">Admin</a></li>
                         {% else %}
                         <li><a class="nav-link" href="{% url 'authuser:login' %}">Login</a></li>
                         <li><a class="nav-link" href="#">Register</a></li>
