--- a/runs/templates/runs/run-detail.html
+++ b/runs/templates/runs/run-detail.html
@@ -11,14 +11,12 @@
 
     <!-- CARD -->
     <div class="">
-      <p class="""><b>{{run.run_name}} by Analyst: {{run.analyst_id}}</b></p>
-      <p class="">RUN_ID: {{run.id}}</p>
       <p class="">
-        PURPOSE: {{run.purpose}}
+        <b>{{run.run_id}} by Analyst: {{run.data_scientist_id}}</b>
       </p>
-      <p class="">RESULTS: {{run.results}}</p>
-      <p class="">CONCLUSION: {{run.conclusion}}</p>
-      <p class="">COMMENTS: {{run.comments}}</p>
+      <p class="">Datset: {{run.mlr_dataset}}</p>
+      <p class="">SPLIT: {{run.split}}</p>
+
     </div>
   </main>
 </div>
