--- a/projects/templates/projects/back-to-projects.html
+++ b/projects/templates/projects/back-to-projects.html
@@ -1,4 +1,4 @@
 <div>
-  <a href="{% url 'projects:projects' %}" class="font-bold text-blue-500 hover:text-blue-300">
+  <a href="{% url 'projects:projects' %}" class="">
     <i class="fas fa-backward fa-fw"></i>BACK TO ALL PROJECTS</a>
 </div>
