--- a/projects/templates/projects/project-delete.html
+++ b/projects/templates/projects/project-delete.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 <!-- Main Section -->
-<main class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
+<main class="">
   <div class="mb-8">
-    <a href="{% url 'projects:projects' %}" class="font-bold text-blue-500 hover:text-blue-300">
+    <a href="{% url 'projects:projects' %}" class="">
       <i class="fas fa-backward fa-fw"></i>BACK TO ALL PROJECTS</a>
   </div>
 
