--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,7 @@
                         <li class="nav-item ">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#"> Projects</a>
+                            <a class="nav-link" href="{% url 'projects:projects' %}"> Projects</a>
                         </li>
 
                         <li class="nav-item dropdown">
