--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,12 @@
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
   <title>DevSearch - Connect with Developers!</title>
-
+  <!-- https://aykevl.nl/2014/09/fix-jumping-scrollbar -->
+  <style>
+    html {
+      margin-left: calc(100vw - 100%);
+    }
+  </style>
 </head>
 
 <body>
