--- a/projects/templates/projects/project-detail.html
+++ b/projects/templates/projects/project-detail.html
@@ -5,23 +5,26 @@
 <!-- Main Section -->
 <main class="">
   <div class="mb-8">
-    <a href="{% url 'projects:projects' %}" class="">
+    <a href="{% url 'projects:projects' %}">
       <i class="fas fa-backward fa-fw"></i>BACK TO ALL PROJECTS</a>
   </div>
 
 
   <!-- CARD -->
   <div class="">
-    <div class="" style="background-image: url('{{ project.featured_image.url }}')" title="Woman holding a mug">
+    <div>
+      <p>project.featured_image.url {{project.featured_image.url}}</p>
+      <img src="{{project.featured_image.url}}" width="100" height="100" alt=" image">
     </div>
-    <div class="">
-      <div class="mb-8">
+  </div>
+  <div class="">
+    <div class="mb-8">
 
-        <div class="">{{project.title}}</div>
-        <p class="">{{project.description}}</p>
-      </div>
-
+      <div class="">{{project.title}}</div>
+      <p class="">{{project.description}}</p>
     </div>
+
+  </div>
   </div>
   <!-- CARD -->
 
