--- a/projects/templates/projects/project-detail.html
+++ b/projects/templates/projects/project-detail.html
@@ -20,8 +20,10 @@
   <div class="">
     <div class="mb-8">
 
-      <div class="">{{project.title}}</div>
-      <p class="">{{project.description}}</p>
+      <div class="">{{project.team}} has the following project {{project.title}} with a status of {{project.status}}
+      </div>
+      <p class="">Details are: {{project.description}}</p>
+
     </div>
 
   </div>
