develop file upload

--- a/runs/templates/runs/run-form.html
+++ b/runs/templates/runs/run-form.html
@@ -18,9 +18,9 @@
       </div>
 
       {% endfor %}
-
-      <button type="submit" class="">UPLOAD
-        RUN</button>
+      <div class="form-control">
+        <button type="submit" class="">UPLOAD RUN</button>
+      </div>
     </form>
 
   </main>
