--- a/classroom/templates/classroom/home.html
+++ b/classroom/templates/classroom/home.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container content">
+      <main>
 
-      <h1>Classroom Home Page</h1>
-      <a href="{% url 'classroom:contact' %}">Contact Page Link</a>
-      <br>
-      <a href="{% url 'classroom:create_teacher' %}">Create new Teacher Link</a>
-      <br>
-      <a href="{% url 'classroom:list_teacher' %}">List Teacher Link</a>
+            <h1>Classroom Home Page</h1>
+            <a href="{% url 'classroom:contact' %}">Contact Page Link</a>
+            <br>
+            <a href="{% url 'classroom:create_teacher' %}">Create new Teacher Link</a>
+            <br>
+            <a href="{% url 'classroom:list_teacher' %}">List Teacher Link</a>
+      </main>
 </div>
 {% endblock content %}
