--- a/classroom/templates/classroom/teacher_confirm_delete.html
+++ b/classroom/templates/classroom/teacher_confirm_delete.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container content">
-
-    <h1>Are you sure you want to delete this teacher?</h1>
-    <h2>Teacher to delete {{teacher}}</h2>
-
-    <form action="" method="post">
-        {% csrf_token %}
-        <input type="submit" value="Confirm DELETE">
-    </form>
+    <main>
+        {% include 'includes/back_home.html' %}
+        <p>Are you sure you want to delete <b>{{teacher}}</b>?</p>
+        <form action="" method="post">
+            {% csrf_token %}
+            <button type="submit">Confirm DELETE</button> <a href="{% url 'classroom:home' %}"><button
+                    type="button">CANCEL</button></a>
+        </form>
+    </main>
 </div>
 {%endblock content %}
