--- a/classroom/templates/classroom/teacher_detail.html
+++ b/classroom/templates/classroom/teacher_detail.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container content">
-      <h2>Detail view for Teacher:</h2>
-      {{teacher}}
+      <main>
+            {% include 'includes/back_home.html' %}
+            <h2>Detail view for Teacher:</h2>
+            {{teacher}}
+      </main>
 </div>
 {%endblock content %}
