--- a/classroom/templates/classroom/teacher_list.html
+++ b/classroom/templates/classroom/teacher_list.html
@@ -1,60 +1,44 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container content">
-    <h1>List of Teachers</h1>
-    <div>
-        {% for teacher in object_list  %}
-        {{teacher.first_name}} {{teacher.last_name}}
-        <a href="/classroom/teacher/{{teacher.id}}"><button>VIEW</button></a> |
-        <a href="/classroom/update_teacher/{{teacher.id}}"><button>UPDATE</button></a> |
-        <a href="/classroom/delete_teacher/{{teacher.id}}"><button>DELETE</button></a>
-        <br>
-        {% endfor %}
-    </div>
-</div>
-<div class="container content">
     <main>
-        <div class="">
-            <!-- Replace with your content -->
+        {% include 'includes/back_home.html' %}
+        <div class="" style="width:1200px;">
             <div class="">
-                <div class="" style="width:1200px;">
-                    <div class="">
-                        <h4>List of Teachers</h4>
-                    </div>
-
-                    <div class="">
-                        <table class="">
-                            <thead>
-                                <tr>
-                                    <th class=""></th>
-                                    <th class=""></th>
-                                    <th class=""></th>
-                                    <th class=""></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for project in projects %}
-                                <tr class="">
-                                    <td class="" style="width:400px">
-                                        {{project.title}}
-                                    </td>
-                                    <td class="">
-                                        <a href="/classroom/teacher/{{teacher.id}}" class=""><button type="button"
-                                                class="">View</button>
-                                        </a>
-                                    </td>
-                                    <td class="">
-                                        <a href="/classroom/update_teacher/{{teacher.id}}" class=""><button
-                                                type="button" class="">Update</button></a>
-                                    </td>
-                                    <td class="">
-                                        <a href="/classroom/delete_teacher/{{teacher.id}}" class="">
-                                            <button type="button" class="">Delete</button></a>
-                                    </td>
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-
+                <h4>List of Teachers</h4>
+            </div>
+            <div class="">
+                <table class="">
+                    <thead>
+                        <tr>
+                            <th class=""></th>
+                            <th class=""></th>
+                            <th class=""></th>
+                            <th class=""></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for teacher in teachers %}
+                        <tr class="">
+                            <td class="" style="width:400px">
+                                {{teacher.first_name}} {{teacher.last_name}}
+                            </td>
+                            <td class="">
+                                <a href="{% url 'classroom:detail_teacher' teacher.id %}" class=""><button type="button"
+                                        class="">View</button>
+                                </a>
+                            </td>
+                            <td class="">
+                                <a href="{% url 'classroom:update_teacher' teacher.id %}" class=""><button type="button"
+                                        class="">Update</button></a>
+                            </td>
+                            <td class="">
+                                <a href="{% url 'classroom:delete_teacher' teacher.id %}" class="">
+                                    <button type="button" class="">Delete</button></a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
     </main>
 </div>
 {%endblock content %}
