--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-  <!-- <link rel="stylesheet" href="{% static 'css/main.css' %}"> -->
-
+  <!-- HTMX -->
+  <script src="https://unpkg.com/htmx.org@1.6.0"></script>
   <title>DevSearch - Connect with Developers!</title>
   <!-- https://aykevl.nl/2014/09/fix-jumping-scrollbar -->
   <style>
