--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'projects:projects' %}"> Projects</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'htmx:check-email' %}"> HTMX</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
