add user_id to Film

--- a/htmx/static/htmx/css/forms.css
+++ b/htmx/static/htmx/css/forms.css
@@ -19,6 +19,9 @@
     input {
       width: 350px;
     }
+li {
+      list-style: none;
+}
 .errorlist {
       list-style: none;
       color: red;
