--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,7 +25,7 @@
                             <a class="nav-link" href="{% url 'projects:projects' %}"> Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'htmx:check-email' %}"> HTMX</a>
+                            <a class="nav-link" href="{% url 'htmx:add-film' %}">HTMX</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
