--- a/htmx/templates/htmx/partials/film-list.html
+++ b/htmx/templates/htmx/partials/film-list.html
@@ -1,9 +1,12 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'htmx/css/forms.css' %}">
+
 {% if films %}
-    <ul>
+<ul>
     {% for film in films %}
-        <li>{{ film.name }}</li>
+    <li>{{film.id}} {{ film.name }}</li>
     {% endfor %}
-    </ul>
+</ul>
 {% else %}
-    <p>You do not have any films in your list</p>
+<p>You do not have any films in your list</p>
 {% endif %}
