--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,10 +22,13 @@
                         <li class="nav-item ">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'projects:projects' %}"> Projects</a>
+                            <a class="nav-link" href="{% url 'projects:projects' %}">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'htmx:add-film' %}">HTMX</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'orm:home' %}">ORM</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
