--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -45,7 +45,7 @@
                             </ul>
                         </li>
                         <li><a class="nav-link" href="{% url 'authuser:logout' %}">Logout</a></li>
-                        <li><a class="nav-link" href="/admin">Admin</a></li>
+                        <li><a class="nav-link" href="/admin" target="blank">Admin</a></li>
                         {% else %}
                         <li><a class="nav-link" href="{% url 'authuser:login' %}">Login</a></li>
                         <li><a class="nav-link" href="#">Register</a></li>
