transfer run app to csvs app

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,11 +33,11 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Runs
+                                CSVS
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{% url 'runs:runs' %}">Runs</a></li>
-                                <li><a class="dropdown-item" href="{% url 'runs:create-run-csv' %}">Create Runs</a></li>
+                                <li><a class="dropdown-item" href="{% url 'csvs:runs' %}">CSVS</a></li>
+                                <li><a class="dropdown-item" href="{% url 'csvs:create-run-csv' %}">Create CSV</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
