--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -37,7 +37,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="{% url 'csvs:runs' %}">CSVS</a></li>
-                                <li><a class="dropdown-item" href="{% url 'csvs:create-run-csv' %}">Create CSV</a></li>
+                                <li><a class="dropdown-item" href="{% url 'csvs:upload-csv' %}">Create CSV</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
