reads csv once uploaded

--- a/csvs/templates/csvs/runs.html
+++ b/csvs/templates/csvs/runs.html
@@ -9,7 +9,7 @@
             <h4>RUNS</h4>
           </div>
           <div class="">
-            <a href="{% url 'csvs:create-run-csv' %}"><button type="button" class="">UPLOAD
+            <a href="{% url 'csvs:upload-csv' %}"><button type="button" class="">UPLOAD
                 RUN CSV</button></a>
           </div>
           <div>Number of pages: {{page_obj.paginator.num_pages}}</div>
