--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,12 +1,8 @@
    * {
-     font-size: 24px;
+      font-family: 'Quicksand', sans-serif;
+      font-size: 22px;
 
    }
-
-   /* body {
-     background-color: linen;
-   } */
-
    .content {
      padding: 50px;
    }
