--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <!-- <link rel="stylesheet" href="{% static 'css/cerulean.css' %}"> -->
+  <link rel="stylesheet" href="{% static 'css/readable.css' %}">
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+
   <!-- HTMX -->
   <script src="https://unpkg.com/htmx.org@1.6.0"></script>
   <title>DevSearch - Connect with Developers!</title>
