add csv reader pycaret

--- a/csvs/templates/csvs/run-detail.html
+++ b/csvs/templates/csvs/run-detail.html
@@ -20,6 +20,7 @@
       </p>
 
       <p class="">run_date: {{run.run_date}}</p>
+      <p class="">run_name: {{run.run_name}}</p>
       <p class="">project_id: {{run.project_id}}</p>
       <p class="">mlr_dataset: {{run.mlr_dataset}}</p>
 
