--- a/csvs/templates/csvs/run-detail.html
+++ b/csvs/templates/csvs/run-detail.html
@@ -16,9 +16,12 @@
     <!-- CARD -->
     <div class="">
       <p class="">
-        <b>{{run.run_id}} by Analyst: {{run.data_scientist_id}}</b>
+        <b>ID: {{run.id}}</b>
       </p>
 
+      <p class="">run_id: {{run.run_id}}
+      </p>
+      <p class="">analyst: {{run.data_scientist_id}}</p>
       <p class="">run_date: {{run.run_date}}</p>
       <p class="">run_name: {{run.run_name}}</p>
       <p class="">project_id: {{run.project_id}}</p>
