pycaret loaded in. run_id is unique

--- a/csvs/templates/csvs/run-detail.html
+++ b/csvs/templates/csvs/run-detail.html
@@ -27,7 +27,8 @@
       <p class="">feature_set: {{run.feature_set}}</p>
       <p class="">split: {{run.split}}</p>
       <p class="">tuned: {{run.tuned}}</p>
-      <p class="">best: {{run.best|truncatechars:40}}</p>
+      <p class="">setup: {{run.setup}}</p>
+      <p class="">model-used: {{run.model_used|truncatechars:40}}</p>
       <p class="">holdout_acc: {{run.holdout_acc}}</p>
 
       <p class="">metrics_dict: {{run.metrics_dict|truncatechars:40}}</p>
