set up pandas page

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,6 +29,8 @@
                                 <li><a class="dropdown-item" href="{% url 'csvs:runs' %}">CSVS</a></li>
                                 <li><a class="dropdown-item" href="{% url 'csvs:upload-file-form' %}">File Upload</a>
                                 </li>
+                                <li><a class="dropdown-item" href="{% url 'csvs:pandas' %}">Pandas Home</a>
+                                </li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
