replace csvs with dts

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,10 +26,10 @@
                                 CSVS
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{% url 'csvs:runs' %}">CSVS</a></li>
-                                <li><a class="dropdown-item" href="{% url 'csvs:upload-file-form' %}">File Upload</a>
+                                <li><a class="dropdown-item" href="{% url 'dts:runs' %}">DTS</a></li>
+                                <li><a class="dropdown-item" href="{% url 'dts:upload-file-form' %}">File Upload</a>
                                 </li>
-                                <li><a class="dropdown-item" href="{% url 'csvs:pandas' %}">Pandas Home</a>
+                                <li><a class="dropdown-item" href="{% url 'dts:pandas' %}">Pandas Home</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider">
