remove csvs app

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,13 +23,13 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                CSVS
+                                DTS
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="{% url 'dts:runs' %}">DTS</a></li>
-                                <li><a class="dropdown-item" href="{% url 'dts:upload-file-form' %}">File Upload</a>
+                                <li><a class="dropdown-item" href="{% url 'dts:upload-file-form' %}">DTS File Upload</a>
                                 </li>
-                                <li><a class="dropdown-item" href="{% url 'dts:pandas' %}">Pandas Home</a>
+                                <li><a class="dropdown-item" href="{% url 'dts:pandas' %}">DTS Pandas Home</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider">
