--- a/authuser/templates/authuser/register.html
+++ b/authuser/templates/authuser/register.html
@@ -1,9 +1,38 @@
 {% extends 'base.html' %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'authuser/css/forms.css' %}">
+<link rel="stylesheet" href="{% static '/authuser/css/forms.css' %}">
+<link rel="stylesheet" href="{% static '/css/forms.css' %}">
 {% block content %}
 
+<style>
+    tr {
+        border: 2px solid black;
+        background-color: antiquewhite;
+    }
 
+    td {
+        padding: 10px 20px;
+    }
+
+    label {
+        margin: 5px;
+    }
+
+    ::placeholder {
+        color: #667766b3;
+        font-style: italic;
+    }
+
+    input {
+        width: 350px;
+    }
+
+    .errorlist {
+        list-style: none;
+        color: red;
+        margin-left: -150px
+    }
+</style>
 <div class="container">
     <p>Login page</p>
 
@@ -55,17 +84,15 @@
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="2" style="align-items: center;">
-                        <input type="submit" value="Register">
+                    <td>
+                        <center>
+                            <input type="submit" value="Register">
+                        </center>
                     </td>
-
                 </tr>
             </table>
-
         </form>
     </div>
-
-
 </div>
 
 {% endblock content %}
