--- a/authuser/templates/authuser/register.html
+++ b/authuser/templates/authuser/register.html
@@ -84,7 +84,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td colspan="2">
                         <center>
                             <input type="submit" value="Register">
                         </center>
