edit authuser admin to register new user in admin

--- a/authuser/templates/authuser/register.html
+++ b/authuser/templates/authuser/register.html
@@ -34,10 +34,8 @@
     }
 </style>
 <div class="container">
-    <p>Login page</p>
-
     <div class="">
-        <h3>Account Login</h3>
+        <h3>Register</h3>
     </div>
     <div>
         {{info.username}} | {{info.email}} | {{info.password1}} | {{info.password2}}
@@ -79,7 +77,7 @@
                         <label for="formInput#password">Confirm Password: </label>
                     </td>
                     <td>
-                        <input class="input input--password" id="formInput#passowrd" type="password" name="password12"
+                        <input class="input input--password" id="formInput#passowrd" type="password" name="password2"
                             placeholder="confirm password" />
                     </td>
                 </tr>
