--- a/templates/base.html
+++ b/templates/base.html
@@ -37,9 +37,8 @@
     {% if messages %}
 
     {% for message in messages %}
-    <div class="alert  alert--{{message.tags}}">
-      <p class="alert__message">{{message}}</p>
-      <button class="alert__close">x</button>
+    <div style="background-color: rgb(183, 239, 183);padding:5px 10px;text-align: center;">
+      {{message}} <button class=" alert__close">x</button>
     </div>
 
     {% endfor %}
