--- a/authuser/templates/authuser/login.html
+++ b/authuser/templates/authuser/login.html
@@ -1,79 +1,48 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'authuser/css/forms.css' %}">
-{% block content %}
 
-<style>
-    tr {
-        border: 2px solid black;
-        background-color: antiquewhite;
-    }
+<div class="container content">
+    <main>
 
-    td {
-        padding: 10px 20px;
-    }
+        <div class="">
+            <h3>Account Login</h3>
+        </div>
 
-    label {
-        margin: 5px;
-    }
+        <div>
+            <form action="" method="POST" class="">
+                {% csrf_token %}
+                <!-- Input:Username -->
 
-    ::placeholder {
-        color: #667766b3;
-        font-style: italic;
-    }
+                <table>
+                    <tr>
+                        <td>
+                            <label for="formInput#text">EMAIL: </label>
+                        </td>
+                        <td>
+                            <input class="input input--text" id="formInput#text" type="text" name="username"
+                                placeholder="Enter your username..." />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="formInput#password">Password: </label>
+                        </td>
+                        <td>
+                            <input class="input input--password" id="formInput#passowrd" type="password" name="password"
+                                placeholder="••••••••" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <center><input type="submit" value="Login"></center>
+                        </td>
 
-    input {
-        width: 350px;
-    }
+                    </tr>
+                </table>
 
-    .errorlist {
-        list-style: none;
-        color: red;
-        margin-left: -150px
-    }
-</style>
-<div class="container">
-
-    <div class="">
-        <h3>Account Login</h3>
-    </div>
-
-    <div>
-        <form action="" method="POST" class="">
-            {% csrf_token %}
-            <!-- Input:Username -->
-
-            <table>
-                <tr>
-                    <td>
-                        <label for="formInput#text">EMAIL: </label>
-                    </td>
-                    <td>
-                        <input class="input input--text" id="formInput#text" type="text" name="username"
-                            placeholder="Enter your username..." />
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label for="formInput#password">Password: </label>
-                    </td>
-                    <td>
-                        <input class="input input--password" id="formInput#passowrd" type="password" name="password"
-                            placeholder="••••••••" />
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2">
-                        <center><input type="submit" value="Login"></center>
-                    </td>
-
-                </tr>
-            </table>
-
-        </form>
-    </div>
-
-
+            </form>
+        </div>
+    </main>
 </div>
-
 {% endblock content %}
