JS for close messages

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,8 @@
 
     {% endblock content %}
   </div>
+  <!-- close mesages -->
   <script>
-
     msg = document.getElementById('message')
     btn = document.getElementById('message')
     btn.addEventListener('click', () => {
