JS close message

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
   <!-- close mesages -->
   <script>
     msg = document.getElementById('message')
-    btn = document.getElementById('message')
+    btn = document.getElementById('btn-close')
     btn.addEventListener('click', () => {
       // alert('clicked')
       msg.style.display = 'none'
